--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Guestbook v1.1</title>
+  <title>Guestbook</title>
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -26,6 +26,9 @@
 
   <div class="container">
     <%= yield %>
+  </div>
+  <div class="footer">
+    <%= link_to "Guestbook #{Guestbook.version}", "https://github.com/guestbook/guestbook/releases/tag/#{Guestbook.version}" %>
   </div>
 </body>
 </html>
